name:                imx-extract-program-image
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            TODO
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imx-extract-program-image
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parsing, ProgramImage, Structs
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses, MultiWayIf
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       bytestring,
                       mtl
