name:                imx-extract
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Frederik Ramcke
maintainer:          frederikramcke@mailbox.org
copyright:           2019 Frederik Ramcke
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imx-extract-program-image
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parsing, ProgramImage, Structs
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses, MultiWayIf, TypeFamilies,
                       ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       bytestring,
                       mtl
